--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,7 +14,7 @@
     {%endfor%}
     {% if user.is_authenticated %}
 
-    <a href="{% url 'logout'%}">{{user}} </a><br>
+    <a href="{% url 'logout'%}">logout</a><br>
 
     {%endif%}
 </body>
